examples/test/testpolicy1668.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1668
  namespace: namespace423
spec:
  podSelector:
    matchLabels:
      key40: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value32
          key28: value42
      podSelector:
        matchLabels:
          key27: value2
          key16: value27
          key39: value9
